<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CalibrateActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackground"
            android:foreground="?attr/selectableItemBackground"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="8dp"
            android:text="Calibrate Camera"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/btn_back"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackground"
            android:foreground="?attr/selectableItemBackground"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:src="@drawable/baseline_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.tugasakhir.veinred.util.MyNestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature_logs"
                        android:textColor="@color/secondary"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/btn_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_button_secondary"
                        android:paddingLeft="16dp"
                        android:paddingTop="6dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="6dp"
                        android:text="View"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/atmospheric_temperature_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/atmospheric_temperature_c"
                        android:textColor="@color/secondary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/atmospheric_temperature_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:autofillHints="@string/degrees_celsius"
                        android:hint="@string/degrees_celsius"
                        android:inputType="numberDecimal"
                        android:textColor="@color/secondary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">
                    <TextView
                        android:id="@+id/reflective_temperature_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reflective_temperature_c"
                        android:textColor="@color/secondary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/reflective_temperature_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="@string/degrees_celsius"
                        android:hint="@string/degrees_celsius"
                        android:inputType="numberDecimal"
                        android:textColor="@color/secondary"
                        android:layout_marginTop="8dp"
                        android:textSize="18sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/external_optics_temperature_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/external_optics_temperature_c"
                        android:textColor="@color/secondary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/external_optics_temperature_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:autofillHints="@string/degrees_celsius"
                        android:hint="@string/degrees_celsius"
                        android:inputType="numberDecimal"
                        android:textColor="@color/secondary"
                        android:textSize="18sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/distance_unit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/distance_unit"
                        android:textColor="@color/secondary"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/distance_unit_value"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="8dp"
                        android:entries="@array/distance_units" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/palette_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/color_palette"
                        android:textColor="@color/secondary"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/palette_value"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="8dp"
                        android:entries="@array/palettes" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/distance_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/distance"
                        android:textColor="@color/secondary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/distance_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:autofillHints="Distance"
                        android:hint="@string/distance"
                        android:inputType="numberDecimal"
                        android:textColor="@color/secondary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/emissivity_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/emissivity"
                        android:textColor="@color/secondary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/emissivity_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:autofillHints="@string/emissivity"
                        android:hint="@string/emissivity"
                        android:inputType="numberDecimal"
                        android:textColor="@color/secondary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/external_optics_transmission_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/external_optics_transmission"
                        android:textColor="@color/secondary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/external_optics_transmission_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:autofillHints="@string/external_optics_transmission"
                        android:hint="@string/external_optics_transmission"
                        android:inputType="numberDecimal"
                        android:textColor="@color/secondary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/relative_humidity_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/relative_humidity"
                        android:textColor="@color/secondary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/relative_humidity_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:autofillHints="@string/relative_humidity"
                        android:hint="@string/relative_humidity"
                        android:inputType="numberDecimal"
                        android:textColor="@color/secondary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/transmission_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/transmission"
                        android:textColor="@color/secondary"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/transmission_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:autofillHints="@string/transmission"
                        android:hint="@string/transmission"
                        android:inputType="numberDecimal"
                        android:textColor="@color/secondary"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </com.tugasakhir.veinred.util.MyNestedScrollView>

</LinearLayout>